make sure projects never overlap filters

--- a/src/templates/Projects/ProjectList/Project/Project.module.scss
+++ b/src/templates/Projects/ProjectList/Project/Project.module.scss
@@ -16,6 +16,10 @@
   text-decoration: none;
   transition: opacity 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
+  &:first-of-type {
+    margin-top: 0 !important;
+  }
+
   &:hover {
     opacity: 0.9;
   }
